--- a/main.html
+++ b/main.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Animanics!</title>
-        <link rel="stylesheet" type ="text/css" href="theme.css">
     </head>
     <body>
-        <canvas id="canvas" width="900" height="600" style="display:block;border: 1px solid black"></canvas>
+        <canvas id="canvas" width="500" height="500" style="display:block;border: 1px solid black"></canvas>
         <button id="circle" type="button"> Circle </button>
         <button id="dvd" type="button"> DVD </button>
+        <button id="clear" type="button"> Clear </button>
         <button id="stop" type="button"> Stop </button>
         <script src="canvas.js"></script>
     </body>
